force-app/main/default/objects/TestObject__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Active__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
                <label>1</label>
            </value>
            <value>
                <fullName>Two</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>Three</fullName>
                <label>3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>